--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,8 +8,9 @@
 
 </form>
 {% if request.user.is_authenticated%}
+<p> Hello {{request.user}}</p>
 <a href="{% url 'logout'%}">Logout</a>
-{%else%}
+{% else %}
 <a href="{% url 'login'%}">Login</a>
-{%endif%}
+{% endif %}
 <hr>
